# skyscraper

./: CMakeLists.txt
src/: attractmode.cpp  main.cpp  scripter.cpp  settings.h  skyscraper.cpp  strtools.cpp
